package chess.chess;

public class ChessException extends RuntimeException{
 
    public ChessException (String errorMessage) { super(errorMessage); }
    
}
