package chess.chess;

import chess.boardgame.Board;
import chess.boardgame.Piece;

public class ChessPiece extends Piece {
    
    private Color color;

    public ChessPiece(Board board, Color color) {
        super(board);
        this.color = color;
    }

    public Color getColor() { return color; }
   
}
