@startuml

class Position {
    - row : int
    - column : int
    
    + setRow(row): void
    + setColumn(Column): void
    + getRow(row): int
    + getColumn(Column): int
}

class Piece {
    + possibleMove(): Piece [][]
    + possibleMove(position : Position): boolean
    + isThereAnyPossibleMove(): boolean
}

class Board {
    - rows : int
    - columns : int
}

class ChessMatch {}

class ChessPiece {}

class King {}
class Queen {}
class Bishop {}
class Knight {}
class Rook {}
class Pawn {}

enum Color {}

class ChessException {}

Piece --* "1" Position
Piece "*" -- "1" Board

ChessPiece --|> Piece

King --|> ChessPiece
Queen --|> ChessPiece
Bishop --|> ChessPiece
Knight --|> ChessPiece
Rook --|> ChessPiece
Pawn --|> ChessPiece


@enduml